Fix Bug: Overflow post when there are more than 2 post stack eachother

--- a/src/main/resources/com/starlight/style.css
+++ b/src/main/resources/com/starlight/style.css
@@ -134,6 +134,10 @@
     -fx-background-color: transparent;
         background-color: transparent;
 }
+
+.post-list {
+    -fx-border-color: red;
+}
 /* debugging only
 
 .VBox {
